205		Starting stability and investment
206		Estimate taxation
207		Estimate tolls
208		Determine if provinces are on the same continent as the owner's capital
209		Determine if provinces are land connected to capital
210		Taxes and tolls take into account distance overseas
211		Estimate production income
212		Estimate gold income
213		Fix for gold income estimate
214		ROTW Tech levels (European ones are completely wrong)
215		Change economy option defaults to historical
216		1.06 saves don't lose muslim buildings when converted by a 1.07 install
217		Apply change 213 to test configs
218		Convert tech
219		Tech investment
220		Add miaphysite religion mapping
221		No longer need the mod in place to avoid crashing
222		Converted provinces have a minimum of 1000 population with historical pop conversion
223		Added Roman Empire mapping to country_mappings
224		Added favored unit variable to Country class
225		Merged changes
226		block some additional nations that can be created by EU3 decision.
227		Minor improvements to country mappings
228		A little bit of refactoring, and being unable to open common/* directories is not a fatal error for pre-1.06 installs.
229		fix error message.
230		Add title merging function and options.
231		Get primary titles and use them as the primary merge target for title merging.
232		Remove a shadowed variable that prevented manpower from being considered for culture mapping.
233		Update changelog with latest changes.
234		Update test configs with the title merging options
235		Make log slightly easier to read
236		Cores and HRE membership added for de jure relationships
237		Upadted province mappings in Spain
238		Add new test saves
239		Update test configurations
240		Update culture and religion mappings
241		Add EU3 diplomacy
242		Defer Mapping countries until last moment (breaks province discovery)
243		Update localization text for converter mod
244		Fix province discovery for land provinces